# ARE_Builder

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  tests.yml
docker/: nwn-musl-compat.c
src/arebuilder/: __main__.py
src/arebuilder/app/: __init__.py  cli.py
src/arebuilder/app/arebuilder/: __init__.py  build_command.py  engine.py
src/arebuilder/app/aredev/: __init__.py  controller.py  host_bridge.py  process.py  project.py  scaffold.py  scaffold_cli.py
src/arebuilder/builder/: __init__.py  archive.py  module_dependencies.py  module_file.py  symlinks.py
src/arebuilder/config/: __init__.py  env.py  module_settings.py  nwn_paths.py  runtime.py
src/arebuilder/content/: __init__.py  palette.py  talktable.py  twoda.py
src/arebuilder/nwn/: __init__.py  compat.py  compile.py
src/arebuilder/templates/aredev/: AREDev.bat  AREDev.sh  docker-compose.yml
src/arebuilder/templates/aredev/config/: arebuilder.env  db.env  nwserver.env
src/arebuilder/templates/aredev/data/: help.txt  logo.txt  timeinit.sql
src/arebuilder/tests/: conftest.py  fixtures.py
src/arebuilder/tests/app/: __init__.py  test_cli.py
src/arebuilder/tests/app/arebuilder/: __init__.py  test_engine.py
src/arebuilder/tests/builder/: test_archive.py  test_module_dependencies.py  test_module_file.py  test_symlinks.py
src/arebuilder/tests/config/: test_module_settings.py  test_nwn_paths.py  test_runtime.py
src/arebuilder/tests/content/: test_palette.py  test_talktable.py  test_twoda.py
src/arebuilder/tests/nwn/: test_compat.py  test_compile.py
(+7 files in other folders)
